[project]
name = "testbed"
version = "0.0.1"

[project.optional-dependencies]
test = [
    "coverage==7.6.12",
    "coverage-conditional-plugin == 0.9.0",
    # fonttools is only needed by Android, but we need to use
    # sys.platform == 'linux' as there's no dependency identifier
    # that can target Android exclusively until 3.13 lands.
    "fonttools==4.56.0 ; sys.platform == 'linux'",
    "pillow==11.0.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
]

[tool.briefcase]
project_name = "Toga Testbed"
bundle = "org.beeware.toga"
url = "https://beeware.org"
license.file = "LICENSE"
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.testbed]
formal_name = "Toga Testbed"
description = "A testbed for Toga visual tests"
icon = "icons/testbed"
sources = [
    "src/testbed",
]
test_sources = [
    "tests",
]
requires = [
    "../travertino",
    "../core",
]

# Some CI configurations (e.g., Textual) manually override `requires` to specify
# installation via the wheels built as part of the CI run. Adding `--find-links` allows
# those wheels to be found. However, in most CI builds, these wheels will be .devX
# wheels, so we need to add `--pre` to ensure they are found as solutions to pip's
# solver.
requirement_installer_args=[
    "--pre",
    "--find-links", "../dist",
]

permission.camera = "The testbed needs to exercise Camera APIs"
permission.fine_location = "The testbed needs to exercise fine-grained geolocation services."
permission.coarse_location = "The testbed needs to exercise coarse-grained geolocation services."
permission.background_location = "The testbed needs to exercise capturing your location while in the background"

[tool.briefcase.app.testbed.macOS]
requires = [
    "../cocoa",
    "std-nslog~=1.0.0",
]
test_sources = [
    "../cocoa/tests_backend",
]

[tool.briefcase.app.testbed.linux]
test_sources = [
    "../gtk/tests_backend",
]
requires = [
    "../gtk",
]

[tool.briefcase.app.testbed.windows]
test_sources = [
    "../winforms/tests_backend",
]
requires = [
    "../winforms",
]

# Mobile deployments
[tool.briefcase.app.testbed.iOS]
test_sources = [
    "../iOS/tests_backend",
]
requires = [
    "../iOS",
    "std-nslog~=1.0.0",
]

[tool.briefcase.app.testbed.android]
test_sources = [
    "../android/tests_backend",
]
requires = [
    "../android",
]

base_theme = "Theme.MaterialComponents.Light.DarkActionBar"

build_gradle_dependencies = [
    "com.google.android.material:material:1.12.0",
    "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
    "org.osmdroid:osmdroid-android:6.1.20",
]

build_gradle_extra_content = """\
android.defaultConfig.python {
    // Coverage requires access to individual .py files.
    extractPackages("toga_android")

    // Pytest's assertion rewriting produces its own .pyc files.
    pyc.src = false
}
"""

[tool.briefcase.app.testbed.web]
requires = [
    "../web"
]
