[build-system]
requires = [
    "setuptools==77.0.3",
    "setuptools_scm==8.1.0",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-textual"
description = "A Textual backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "console",
    "textual",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
linux = "toga_textual"
windows = "toga_textual"
macOS = "toga_textual"
freeBSD = "toga_textual"

[project.entry-points."toga_core.backend.toga_textual"]
App = "toga_textual.app:App"
# DocumentApp = "toga_textual.app:DocumentApp"
Command = "toga_textual.command:Command"
Font = "toga_textual.fonts:Font"
Icon = "toga_textual.icons:Icon"
# Image = "toga_textual.images:Image"
Paths = "toga_textual.paths:Paths"
dialogs = "toga_textual.dialogs"
resources = "toga_textual.resources"

# Hardware
# Camera = "toga_textual.hardware.camera:Camera"
#Location = "toga_textual.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_textual.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_textual.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_textual.statusicons:StatusIconSet"

# Widgets
# ActivityIndicator = "toga_textual.widgets.activityindicator:ActivityIndicator"
Box = "toga_textual.widgets.box:Box"
Button = "toga_textual.widgets.button:Button"
# Canvas = "toga_textual.widgets.canvas:Canvas"
# DateInput = "toga_textual.widgets.dateinput:DateInput"
# DetailedList = "toga_textual.widgets.detailedlist:DetailedList"
# Divider = "toga_textual.widgets.divider:Divider"
# ImageView = "toga_textual.widgets.imageview:ImageView"
Label = "toga_textual.widgets.label:Label"
# MapView = "toga_textual.widgets.mapview:MapView"
# MultilineTextInput = "toga_textual.widgets.multilinetextinput:MultilineTextInput"
# NumberInput = "toga_textual.widgets.numberinput:NumberInput"
# OptionContainer = "toga_textual.widgets.optioncontainer:OptionContainer"
# PasswordInput = "toga_textual.widgets.passwordinput:PasswordInput"
# ProgressBar = "toga_textual.widgets.progressbar:ProgressBar"
# ScrollContainer = "toga_textual.widgets.scrollcontainer:ScrollContainer"
# Selection = "toga_textual.widgets.selection:Selection"
# Slider = "toga_textual.widgets.slider:Slider"
# SplitContainer = "toga_textual.widgets.splitcontainer:SplitContainer"
Switch = "toga_textual.widgets.switch:Switch"
# Table = "toga_textual.widgets.table:Table"
TextInput = "toga_textual.widgets.textinput:TextInput"
# TimeInput = "toga_textual.widgets.timeinput:TimeInput"
# Tree = "toga_textual.widgets.tree:Tree"
# WebView = "toga_textual.widgets.webview:WebView"

# Windows
MainWindow = "toga_textual.window:MainWindow"
Window = "toga_textual.window:Window"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "textual >= 3.2.0, < 4.0.0",
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_textual"]

[tool.coverage.paths]
source = [
    "src/toga_textual",
    "**/toga_textual",
]
