[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools_scm==8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "travertino"
description = "A set of constants and base classes for describing user interface layouts."
readme = "README.rst"
requires-python = ">= 3.9"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "css",
    "box model",
    "layout",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
# These are needed in order to run Travertino's test suite.
dev = [
    "coverage[toml] == 7.9.1",
    "coverage-conditional-plugin == 0.9.0",
    "pytest == 8.4.1",
    "tox == 4.27.0",
    # typing-extensions needed for TypeAlias added in Py 3.10
    "typing-extensions == 4.12.2 ; python_version < '3.10'",
]

[project.urls]
Homepage = "https://beeware.org/travertino"
Funding = "https://beeware.org/contributing/membership/"
# Documentation = "https://travertino.readthedocs.io/en/latest/"
Tracker = "https://github.com/beeware/travertino/issues"
Source = "https://github.com/beeware/travertino"

[tool.setuptools_scm]
root = ".."

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["travertino"]

[tool.coverage.paths]
source = [
    "src/travertino",
    "**/travertino",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
]

# Below is a list of ignored rules.  Many (if not all) of these have been disabled
# to facilitate a smooth transition from tools like black and isort to ruff, where
# instances of these errors were caught.  Many if not all of these are candidates
# for future fixes throughout the project.
ignore = [
    "F405",      # variable may be undefined
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = [
]
known-first-party = [
    "travertino"
]
