[project]
name = "testbed"
version = "0.0.1"

[dependency-groups]
test = [
    "briefcase",
    "playwright == 1.51.0",
    # "pytest==8.4.1",
    "pytest==8.3.5",
    # "pytest-asyncio==1.1.0",
    "pytest-asyncio==0.26.0",
    "pytest-playwright==0.7.0",
]

[tool.briefcase]
project_name = "Toga Web Testbed"
bundle = "org.beeware.toga"
url = "https://beeware.org"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.testbed]
formal_name = "Toga Testbed"
description = "A testbed for Toga visual tests"
icon = "icons/testbed"
sources = [
    "src/testbed",
]
test_sources = [
    "tests",
]
requires = [
    "../travertino",
    "../core",
]

[tool.briefcase.app.testbed.web]
requires = [
    "../web"
]
style_framework = "Shoelace v2.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"
