[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_web"]

[tool.coverage.paths]
source = [
    "src/toga_web",
    "**/toga_web",
]
