[build-system]
requires = [
    "setuptools==82.0.1",
    "setuptools_scm==10.0.5",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-web"
description = "A Web backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "web",
    "pyscript",
    "pyodide",
    "wasm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
web = "toga_web"

[project.entry-points."toga_core.backend.toga_web"]
App = "toga_web.app:App"
# DocumentApp = "toga_web.app:DocumentApp"
Command = "toga_web.command:Command"
Font = "toga_web.fonts:Font"
Icon = "toga_web.icons:Icon"
# Image = "toga_web.images:Image"
Paths = "toga_web.paths:Paths"
dialogs = "toga_web.dialogs"
resources = "toga_web.resources"

# Hardware
# Camera = "toga_web.hardware.camera:Camera"
# Location = "toga_web.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_web.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_web.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_web.statusicons:StatusIconSet"

# Widgets
ActivityIndicator = "toga_web.widgets.activityindicator:ActivityIndicator"
Box = "toga_web.widgets.box:Box"
Button = "toga_web.widgets.button:Button"
Canvas = "toga_web.widgets.canvas:Canvas"
DateInput = "toga_web.widgets.dateinput:DateInput"
# DetailedList = "toga_web.widgets.detailedlist:DetailedList"
Divider = "toga_web.widgets.divider:Divider"
# ImageView = "toga_web.widgets.imageview:ImageView"
Label = "toga_web.widgets.label:Label"
# MapView = "toga_web.widgets.mapview:MapView"
# MultilineTextInput = "toga_web.widgets.multilinetextinput:MultilineTextInput"
# NumberInput = "toga_web.widgets.numberinput:NumberInput"
# OptionContainer = "toga_web.widgets.optioncontainer:OptionContainer"
PasswordInput = "toga_web.widgets.passwordinput:PasswordInput"
ProgressBar = "toga_web.widgets.progressbar:ProgressBar"
ScrollContainer = "toga_web.widgets.scrollcontainer:ScrollContainer"
Selection = "toga_web.widgets.selection:Selection"
Slider = "toga_web.widgets.slider:Slider"
# SplitContainer = "toga_web.widgets.splitcontainer:SplitContainer"
Switch = "toga_web.widgets.switch:Switch"
# Table = "toga_web.widgets.table:Table"
TextInput = "toga_web.widgets.textinput:TextInput"
TimeInput = "toga_web.widgets.timeinput:TimeInput"
# Tree = "toga_web.widgets.tree:Tree"
# WebView = "toga_web.widgets.webview:WebView"

# Windows
MainWindow = "toga_web.window:MainWindow"
Window = "toga_web.window:Window"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_web"]

[tool.coverage.paths]
source = [
    "src/toga_web",
    "**/toga_web",
]
