[build-system]
requires = [
    "setuptools==82.0.1",
    "setuptools_scm==10.0.5",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-winforms"
description = "A Windows backend for the Toga widget toolkit using the WinForms API."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
    "LICENSE.WebView2",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "windows",
    "winforms",
    "toga",
    "desktop",
    ".net",
    "dotnet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
windows = "toga_winforms"

[project.entry-points."toga_core.backend.toga_winforms"]
App = "toga_winforms.app:App"
Command = "toga_winforms.command:Command"
Font = "toga_winforms.fonts:Font"
Icon = "toga_winforms.icons:Icon"
Image = "toga_winforms.images:Image"
Paths = "toga_winforms.paths:Paths"
dialogs = "toga_winforms.dialogs"
resources = "toga_winforms.resources"

# Hardware
# Camera = "toga_winforms.hardware.camera:Camera"
# Location = "toga_winforms.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_winforms.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_winforms.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_winforms.statusicons:StatusIconSet"

# Widgets
ActivityIndicator = "toga_winforms.widgets.activityindicator:ActivityIndicator"
Box = "toga_winforms.widgets.box:Box"
Button = "toga_winforms.widgets.button:Button"
Canvas = "toga_winforms.widgets.canvas:Canvas"
DateInput = "toga_winforms.widgets.dateinput:DateInput"
DetailedList = "toga_winforms.widgets.detailedlist:DetailedList"
Divider = "toga_winforms.widgets.divider:Divider"
ImageView = "toga_winforms.widgets.imageview:ImageView"
Label = "toga_winforms.widgets.label:Label"
MapView = "toga_winforms.widgets.mapview:MapView"
MultilineTextInput = "toga_winforms.widgets.multilinetextinput:MultilineTextInput"
NumberInput = "toga_winforms.widgets.numberinput:NumberInput"
OptionContainer = "toga_winforms.widgets.optioncontainer:OptionContainer"
PasswordInput = "toga_winforms.widgets.passwordinput:PasswordInput"
ProgressBar = "toga_winforms.widgets.progressbar:ProgressBar"
ScrollContainer = "toga_winforms.widgets.scrollcontainer:ScrollContainer"
Selection = "toga_winforms.widgets.selection:Selection"
Slider = "toga_winforms.widgets.slider:Slider"
SplitContainer = "toga_winforms.widgets.splitcontainer:SplitContainer"
Switch = "toga_winforms.widgets.switch:Switch"
Table = "toga_winforms.widgets.table:Table"
TextInput = "toga_winforms.widgets.textinput:TextInput"
TimeInput = "toga_winforms.widgets.timeinput:TimeInput"
Tree = "toga_winforms.widgets.tree:Tree"
WebView = "toga_winforms.widgets.webview:WebView"

# Windows
MainWindow = "toga_winforms.window:MainWindow"
Window = "toga_winforms.window:Window"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "pythonnet >= 3.0.0",
    "toga-core == {version}",
    "pillow >= 10.0.0",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_winforms"]

[tool.coverage.paths]
source = [
    "src/toga_winforms",
    "**/toga_winforms",
]
