[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Switch Demo"
bundle = "org.beeware"
version = "0.3.0.dev25"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.SwitchDemo]
formal_name = "Switch Demo"
description = "A testing app"
sources = ['SwitchDemo']
requires = []


[tool.briefcase.app.SwitchDemo.macOS]
requires = [
    'toga-cocoa',
]

[tool.briefcase.app.SwitchDemo.linux]
requires = [
    'toga-gtk',
]

[tool.briefcase.app.SwitchDemo.windows]
requires = [
    'toga-winforms',
]

# Mobile deployments
[tool.briefcase.app.SwitchDemo.iOS]
requires = [
    'toga-iOS',
]

[tool.briefcase.app.SwitchDemo.android]
requires = [
    'toga-android',
]
