[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Activity Indicator"
bundle = "org.beeware"
version = "0.3.0.dev35"
url = "https://beeware.org"
license = "BSD license"
author = 'Tiberius Yak'
author_email = "tiberius@beeware.org"

[tool.briefcase.app.activityindicator]
formal_name = "Activity Indicator"
description = "A testing app"
sources = ['activityindicator']
requires = [
    '../../src/core',
]


[tool.briefcase.app.activityindicator.macOS]
requires = [
    '../../src/cocoa',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.activityindicator.linux]
requires = [
    '../../src/gtk',
]

[tool.briefcase.app.activityindicator.windows]
requires = [
    '../../src/winforms',
]

# Mobile deployments
[tool.briefcase.app.activityindicator.iOS]
requires = [
    '../../src/iOS',
    'std-nslog>=1.0.0',
]

[tool.briefcase.app.activityindicator.android]
requires = [
    '../../src/android',
]
