[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Activity Indicator"
bundle = "org.beeware.toga.examples"
version = "0.0.1"
url = "https://beeware.org"
license.file = "LICENSE"
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.activityindicator]
formal_name = "Activity Indicator"
description = "A testing app"
sources = ["activityindicator"]
requires = [
    "../../travertino",
    "../../core",
]


[tool.briefcase.app.activityindicator.macOS]
requires = [
    "../../cocoa",
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.activityindicator.linux]
requires = [
    "../../gtk",
]

[tool.briefcase.app.activityindicator.windows]
requires = [
    "../../winforms",
]

# Mobile deployments
[tool.briefcase.app.activityindicator.iOS]
requires = [
    "../../iOS",
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.activityindicator.android]
requires = [
    "../../android",
]

base_theme = "Theme.MaterialComponents.Light.DarkActionBar"

build_gradle_dependencies = [
    "com.google.android.material:material:1.12.0",
]

# Web deployment
[tool.briefcase.app.activityindicator.web]
requires = [
    "../../web",
]
style_framework = "Shoelace v2.3"
